// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Theme System - Snapshot Tests AnimatedThemeToggler should match snapshot 1`] = `
<div>
  <button
    class="relative"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-moon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
      />
    </svg>
    <span
      class="sr-only"
    >
      Toggle theme
    </span>
  </button>
</div>
`;

exports[`Theme System - Snapshot Tests ThemeToggle should match snapshot 1`] = `
<div>
  <div
    class="w-10 h-10 cursor-pointer flex items-center justify-center"
  >
    <button
      class="relative"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-moon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
        />
      </svg>
      <span
        class="sr-only"
      >
        Toggle theme
      </span>
    </button>
  </div>
</div>
`;
